Avoid awkward breaks in toggle text

--- a/src/components/Toggle.scss
+++ b/src/components/Toggle.scss
@@ -19,6 +19,10 @@ limitations under the License.
 .toggle {
     display: flex;
 
+    > :first-child {
+        min-width: 100%;
+    }
+
     > input[type='checkbox'] {
         // Remove the OS's representation
         display: none;
